--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,10 +7,14 @@
             {{post.published_date}}
         </div>
         {% endif %}
+
         <h2>{{post.title}}</h2>
         <p>{{ post.text | linebreaksbr }}</p>
         {% if user.is_authenticated %}
-            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span>Editar</a>
+            <a class="btn btn-outline-primary"  href="{% url 'post_edit' pk=post.pk %}">Editar</a>
+            {% if post.published_date == None %}
+                <a class="btn btn-outline-primary" href="{% url 'post_publish' pk=post.pk %}">Publicar</a>
+            {% endif %}
         {% endif %}
     </div>
 {% endblock %}
