--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,6 +12,7 @@
         <p>{{ post.text | linebreaksbr }}</p>
         {% if user.is_authenticated %}
             <a class="btn btn-outline-primary"  href="{% url 'post_edit' pk=post.pk %}">Editar</a>
+            <a class="btn btn-danger"  href="{% url 'post_remove' pk=post.pk %}">Eliminar</a>
             {% if post.published_date == None %}
                 <a class="btn btn-outline-primary" href="{% url 'post_publish' pk=post.pk %}">Publicar</a>
             {% endif %}
